# lian-li-linux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/lianli-daemon/: Cargo.toml
crates/lianli-daemon/src/: aio_controller.rs  desktop_display.rs  fan_controller.rs  ipc_server.rs  main.rs  openrgb_server.rs  pidlock.rs  rgb_controller.rs  service.rs  template_store.rs
crates/lianli-devices/: Cargo.toml
crates/lianli-devices/src/: crypto.rs  detect.rs  display_switcher.rs  ene6k77.rs  galahad2_trinity.rs  hydroshift2_lcd.rs  hydroshift_lcd.rs  lib.rs  tinyuz.rs  tl_fan.rs  tl_lcd.rs  traits.rs  turzx.rs  winusb_lcd.rs  wireless.rs
crates/lianli-evdi/: Cargo.toml  build.rs
crates/lianli-evdi/src/: ffi.rs  lib.rs
crates/lianli-gui/: Cargo.toml  vite.config.ts
crates/lianli-gui/src/: backend.rs  conversions.rs  editor.rs  main.rs  main.ts  router.ts  state.rs  style.css  template_browser.rs  types.ts
crates/lianli-gui/src-tauri/src/: commands.rs  main.rs
crates/lianli-gui/src/components/: DeviceCard.vue  RgbDeviceCard.vue  Sidebar.vue
crates/lianli-gui/src/editor/: apply.rs  mapping.rs  ops.rs  preview.rs  reflect.rs
crates/lianli-gui/src/stores/: config.ts
crates/lianli-gui/src/views/: RgbView.vue
crates/lianli-gui/ui/: main.slint  sidebar.slint
crates/lianli-gui/ui/components/: color_picker.slint  labeled_slider.slint
crates/lianli-gui/ui/pages/: aio.slint  devices.slint  fans.slint  lcd.slint  rgb.slint  settings.slint
crates/lianli-gui/ui/windows/: template_browser.slint  template_editor.slint
crates/lianli-gui/ui/windows/template_editor/: inputs.slint  props.slint  types.slint
crates/lianli-media/: Cargo.toml
crates/lianli-media/src/: common.rs  cooler.rs  custom.rs  doublegauge.rs  image.rs  lib.rs  sensor.rs  video.rs
crates/lianli-media/src/custom/: helpers.rs
crates/lianli-media/src/custom/widgets/: bar.rs  core_bars.rs  label.rs  mod.rs  radial_gauge.rs  sparkline.rs  speedometer.rs  value_text.rs
crates/lianli-shared/: Cargo.toml
crates/lianli-shared/src/: aio.rs  config.rs  device_id.rs  fan.rs  fonts.rs  ipc.rs  lib.rs  media.rs  rgb.rs  screen.rs  sensors.rs  systeminfo.rs  template.rs  template_catalog.rs  template_defaults.rs
crates/lianli-transport/: Cargo.toml
crates/lianli-transport/src/: hid_backend.rs  rusb_hid.rs  usb.rs
packaging/archlinux/: PKGBUILD  lianli-linux.install
packaging/desktop/: com.sgtaziz.lianlilinux.desktop
packaging/systemd/: lianli-daemon.service
packaging/udev/: 99-lianli.rules
systemd/: lianli-daemon@.service
templates/: README.md  default_templates.json
templates/assets/cooler/: template.json
templates/assets/doublegauge/: template.json
templates/assets/neon-us88/: animation.apng  template.json
templates/assets/sensor_gauge/: template.json
templates/assets/us88-skeleton/: template.json
udev/: 99-lianli.rules
