[package]
name = "lianli-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lianli-daemon"
path = "src/main.rs"

[dependencies]
lianli-shared = { path = "../lianli-shared" }
lianli-transport = { path = "../lianli-transport" }
lianli-devices = { path = "../lianli-devices" }
lianli-evdi = { path = "../lianli-evdi" }
lianli-media = { path = "../lianli-media" }
base64 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rusb = { workspace = true }
hidapi = { workspace = true }
notify = { workspace = true }
image = { workspace = true }
ffmpeg-next = { workspace = true }
signal-hook = "0.3"
