[package]
name = "lianli-gui"
version.workspace = true
edition.workspace = true

[dependencies]
lianli-shared = { path = "../lianli-shared" }
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
