[package]
name = "lianli-gui"
version.workspace = true
edition.workspace = true

[dependencies]
lianli-shared = { path = "../lianli-shared" }
slint = { git = "https://github.com/slint-ui/slint", rev = "e27d0d19e983baf71532de8b7a4a0ebce2026237", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }

base64 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
rfd = "0.15"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", rev = "e27d0d19e983baf71532de8b7a4a0ebce2026237" }
