[package]
name = "lianli-media"
version.workspace = true
edition.workspace = true

[dependencies]
lianli-shared = { path = "../lianli-shared" }
image = { workspace = true }
rusttype = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
